--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             </div>    
         </div>
     </div>
-    <script src="/js/modal.js">
+    <script src="./js/modal.js">
     </script>
 </body>
 
