--- a/index.html
+++ b/index.html
@@ -402,25 +402,25 @@
                         <label for="input-name" class="modal-form-label">Имя</label>
                         <span class="input-wrap">
                             <input type="text" id="input-name" class="modal-form-input" placeholder="" name="modal-name">
-                            <svg class="modal-form-icon" width="18" height="18">
+                            <svg class="modal-form-icon" width="12" height="12">
                                 <use href="./images/sprite.svg#icon-nm"> </use>
                             </svg>
                         </span>
                     </div>
                     <div class="modal-form-field">
-                        <label for="input-name" class="modal-form-label">Телефон</label>
+                        <label for="input-tel" class="modal-form-label">Телефон</label>
                         <span class="input-wrap">
                             <input type="text" id="input-tel" class="modal-form-input" placeholder="" name="modal-tel">
-                            <svg class="modal-form-icon" width="18" height="18">
+                            <svg class="modal-form-icon" width="13" height="13">
                                 <use href="./images/sprite.svg#icon-tl"> </use>
                             </svg>
                         </span>
                     </div>
                     <div class="modal-form-field">
-                        <label for="input-tel" class="modal-form-label">Почта</label>
+                        <label for="input-email" class="modal-form-label">Почта</label>
                         <span class="input-wrap">
                             <input type="text" id="input-email" class="modal-form-input" placeholder="" name="modal-email">
-                            <svg class="modal-form-icon" width="18" height="18">
+                            <svg class="modal-form-icon" width="15" height="12">
                                 <use href="./images/sprite.svg#icon-ml"> </use>
                             </svg>
                         </span>
